Fix alignment

--- a/frontend/src/styles/FakeContainer.module.css
+++ b/frontend/src/styles/FakeContainer.module.css
@@ -7,6 +7,7 @@
 .accordionContainer {
   display: flex;
   flex-flow: row wrap;
+  font-size: clamp(0px, min(7vw, 12vh), 100px);
 }
 
 .fakeContainer.isOpen {
@@ -24,13 +25,13 @@
 .titleWord {
   background-color: var(--theme-color);
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   flex-grow: 1;
   align-items: center;
   justify-content: center;
 
   font-size: 3vw;
-  line-height: 1;
+  /* line-height: 1; */
   padding: 0 3px;
   display: flex;
   justify-content: center;
@@ -41,13 +42,20 @@
   cursor: pointer;
 }
 
+.titleWord.title.englishWord {
+  font-size: 0.7em;
+  padding-bottom: 0;
+}
+
 .accordionContainer .title {
   font-family: var(--ff-haim-cond), var(--ff-futura);
   font-size: clamp(0px, min(7vw, 12vh), 100px);
   font-weight: 400;
-  line-height: 0.4;
-  padding: 0.1em;
+  /* line-height: 0.4;
+  padding: 0.1em; */
   letter-spacing: -1.2px;
+  padding-bottom: 0.2em;
+  line-height: 0;
 }
 
 .accordionContainer .subtitle {
